--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -21,20 +21,9 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"  />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <userControls:DynamicItemView ItemsSource="{x:Bind ViewModel.DirectoryItems}" 
-                                          ViewOptions="{x:Bind ViewModel.FileOperations.ViewOptions.ViewOptions, 
+        <userControls:DynamicItemView Collections="{x:Bind ViewModel.Collections}"
+                                      ViewOptions="{x:Bind ViewModel.FileOperations.ViewOptions.ViewOptions, 
                                                                 Mode=OneWay}" />
-
-            <userControls:DirectoryItemInfoPane Grid.Column="1" />
-
-        </Grid>
-
         <StackPanel Grid.Row="1" 
             Padding="15  5 15 0"
             Grid.Column="0" 
@@ -42,11 +31,11 @@
             VerticalAlignment="Bottom" 
             Orientation="Horizontal">
             <StackPanel Orientation="Horizontal" Margin="0 0 7 0">
-                <TextBlock Text="{x:Bind ViewModel.DirectoryItems.Count, Mode=OneWay}" Margin="4 0" />
+                <TextBlock Text="{x:Bind ViewModel.Collections.Items.Count, Mode=OneWay}" Margin="4 0" />
                 <TextBlock Text="items" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="7 0">
-                <TextBlock Text="{x:Bind ViewModel.SelectedItems.Count, Mode=OneWay}" Margin="4 0" />
+                <TextBlock Text="{x:Bind ViewModel.Collections.SelectedItems.Count, Mode=OneWay}" Margin="4 0" />
                 <TextBlock Text="items selected" />
             </StackPanel>
         </StackPanel>
