Moved tool bar wtih file operations in directory page (Again)
To prevent any other class to have file operations logic. Only directory should "know" how to create copy or delete items in it

--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -42,7 +42,7 @@
                 <FontIcon FontSize="13" Glyph="&#xE72C;" />
             </Button>
             <Button
-                ToolTipService.ToolTip="Up to directory"
+                ToolTipService.ToolTip="Up to Directory"
                 ToolTipService.Placement="Bottom"
                 Command="{x:Bind ViewModel.NavigateUpDirectoryCommand}"
                 Style="{StaticResource SmallIconButton}">
