--- a/FileExplorer/App.xaml
+++ b/FileExplorer/App.xaml
@@ -18,9 +18,16 @@
                 <Setter Property="Width" Value="40" />
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
+
+            <Style x:Key="MenuButton" TargetType="Button">
+                <Setter Property="Padding" Value="10 8"  />
+                <Setter Property="Margin" Value="0 0 10 0" />
+            </Style>
+
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
 
             <generalViewModels:FileOperationsViewModel x:Key="FileOperations" />
+            <generalViewModels:ViewOptionsViewModel x:Key="ViewOptions" />
 
         </ResourceDictionary>
     </Application.Resources>
