--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -11,31 +11,134 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:ui="using:FileExplorer.UI"
     xmlns:userControls="using:FileExplorer.UI.UserControls"
+    xmlns:messages="using:Models.Messages"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Padding="15 10" KeyboardAcceleratorPlacementMode="Hidden">
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <userControls:DynamicItemView Collections="{x:Bind ViewModel.Collections}"
-                                      ViewOptions="{x:Bind ViewModel.FileOperations.ViewOptions.ViewOptions, 
-                                                                Mode=OneWay}" />
-        <StackPanel Grid.Row="1" 
+        <Grid Margin="0 10 0 0"  Padding="15 5">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Horizontal">
+                <DropDownButton  
+                     IsEnabled="{x:Bind ViewModel.CanCreateItems}"
+                     Style="{StaticResource MenuButton}" 
+                     ToolTipService.ToolTip="New File"
+                     ToolTipService.Placement="Bottom">
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">New</TextBlock>
+                        <FontIcon FontSize="12" Glyph="&#xE710;" />
+                    </StackPanel>
+
+                    <DropDownButton.Flyout>
+                        <MenuFlyout Placement="Bottom">
+                            <MenuFlyoutItem 
+                                 Command="{x:Bind ViewModel.CreateFileCommand}"
+                                 Text="File" />
+                            <MenuFlyoutItem 
+                                 Command="{x:Bind ViewModel.CreateDirectoryCommand}"
+                                 Text="Folder"/>
+                        </MenuFlyout>
+                    </DropDownButton.Flyout>
+                </DropDownButton>
+
+                <CommandBar OverflowButtonVisibility="Collapsed" >
+                    <AppBarButton IsCompact="True"
+                           ToolTipService.ToolTip="Copy"
+                           ToolTipService.Placement="Bottom" MaxWidth="55">
+                        <AppBarButton.Icon>
+                            <FontIcon FontSize="20" Glyph="&#xE8C8;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+                    <AppBarButton IsCompact="True"
+                           ToolTipService.ToolTip="Cut"
+                           ToolTipService.Placement="Bottom" MaxWidth="55">
+                        <AppBarButton.Icon>
+                            <FontIcon FontSize="20" Glyph="&#xE8C6;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+                    <AppBarButton IsCompact="True"
+                           ToolTipService.ToolTip="Paste"
+                           ToolTipService.Placement="Bottom" MaxWidth="55">
+                        <AppBarButton.Icon>
+                            <FontIcon FontSize="20" Glyph="&#xE77F;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+                    <AppBarButton IsCompact="True"
+                           Command="{x:Bind ViewModel.BeginRenamingSelectedItemCommand}"
+                           ToolTipService.ToolTip="Rename"
+                           ToolTipService.Placement="Bottom" MaxWidth="55">
+                        <AppBarButton.Icon>
+                            <FontIcon FontSize="20" Glyph="&#xE8AC;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+
+                    <AppBarButton IsCompact="True" 
+                           Command="{x:Bind ViewModel.RecycleOperationCommand}"
+                           ToolTipService.ToolTip="Delete"
+                           ToolTipService.Placement="Bottom" MaxWidth="55">
+                        <AppBarButton.Icon>
+                            <FontIcon FontSize="20" Glyph="&#xE74D;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+                </CommandBar>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+
+                <userControls:ViewOptionsSelector />
+
+                <DropDownButton 
+                  Style="{StaticResource MenuButton}"
+                  ToolTipService.ToolTip="Sort elements"
+                  ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Sort</TextBlock>
+                        <FontIcon FontSize="12" Glyph="&#xE8CB;"  />
+                    </StackPanel>
+                </DropDownButton>
+                <Button 
+                  Style="{StaticResource MenuButton}" 
+                  ToolTipService.ToolTip="File Details"
+                  ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Details</TextBlock>
+                        <FontIcon FontSize="14" Glyph="&#xE946;" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+        </Grid>
+
+        <Grid Row="1" HorizontalAlignment="Stretch">
+            <userControls:DynamicItemView ViewOptions="{Binding Path=Value, Source={StaticResource ViewOptions}, Mode=OneWay}"
+                                          ItemsSource="{x:Bind ViewModel.DirectoryItems, Mode=OneWay}" 
+                                          SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
+        </Grid>
+
+        <StackPanel Grid.Row="2" 
             Padding="15  5 15 0"
             Grid.Column="0" 
             HorizontalAlignment="Stretch" 
             VerticalAlignment="Bottom" 
             Orientation="Horizontal">
             <StackPanel Orientation="Horizontal" Margin="0 0 7 0">
-                <TextBlock Text="{x:Bind ViewModel.Collections.Items.Count, Mode=OneWay}" Margin="4 0" />
+                <TextBlock Text="{x:Bind ViewModel.DirectoryItems.Count, Mode=OneWay}" Margin="4 0" />
                 <TextBlock Text="items" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="7 0">
-                <TextBlock Text="{x:Bind ViewModel.Collections.SelectedItems.Count, Mode=OneWay}" Margin="4 0" />
+                <TextBlock Text="{x:Bind ViewModel.SelectedItems.Count, Mode=OneWay}" Margin="4 0" />
                 <TextBlock Text="items selected" />
             </StackPanel>
         </StackPanel>
@@ -43,18 +146,18 @@
         <interactivity:Interaction.Behaviors>
             <!--TODO: HotKey2 Del - Delete item-->
             <toolkitBehaviors:KeyDownTriggerBehavior Key="Delete">
-                <core:InvokeCommandAction Command="{x:Bind ViewModel.FileOperations.RecycleSelectedItemsCommand}" />
+                <core:InvokeCommandAction Command="{x:Bind ViewModel.RecycleOperationCommand}" />
             </toolkitBehaviors:KeyDownTriggerBehavior>
         </interactivity:Interaction.Behaviors>
         <Grid.KeyboardAccelerators>
             <!--TODO: HotKey1 Ctrl+R - Rename-->
             <ui:CommandKeyboardAccelerator 
                 Modifiers="Control" Key="R"
-                Command="{x:Bind ViewModel.FileOperations.BeginRenamingSelectedItemCommand}"
+                Command="{x:Bind ViewModel.BeginRenamingSelectedItemCommand}"
             />
             <ui:CommandKeyboardAccelerator 
                 Modifiers="Shift" Key="Delete"
-                Command="{x:Bind ViewModel.FileOperations.DeleteSelectedItemsCommand}"
+                Command="{x:Bind ViewModel.DeleteOperationCommand}"
             />
             <!--TODO: HotKey3 Ctrl+A - SelectAll-->
             <!--<KeyboardAccelerator Modifiers="Control" Key="A" Invoked="SelectAllItems" />-->
