--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -159,28 +159,15 @@
 
                 <Grid Column="2">
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
 
-                    <Grid Margin="0 10 0 0"  Padding="15 5">
-                        <userControls:FileOperationsToolbar />
-                    </Grid>
+                    <Frame  x:Name="NavigationFrame" />
+                    <userControls:ItemPropertiesPanel Grid.Column="1"  />
 
-                    <Grid Row="1">
-
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <Frame  x:Name="NavigationFrame" />
-                        <userControls:ItemPropertiesPanel Grid.Column="1"  />
-                    </Grid>
-
-
-                    <userControls:CommandedInfoBar Grid.Row="1" />
+                    <userControls:CommandedInfoBar Grid.Column="1" />
                 </Grid>
 
             </Grid>
