--- a/FileExplorer/UI/UserControls/ItemIPropertiesPanel.xaml
+++ b/FileExplorer/UI/UserControls/ItemIPropertiesPanel.xaml
@@ -10,58 +10,13 @@
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:templateBehaciors="using:FileExplorer.UI.Behaviors.Template"
     xmlns:contentSelectors="using:FileExplorer.UI.ContentSelectors"
+    xmlns:storageProperties="using:FileExplorer.UI.UserControls.StorageProperties"
     mc:Ignorable="d">
 
     <UserControl.Resources>
-        <Style TargetType="FrameworkElement" x:Key="PanelItem">
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="Margin" Value="0 6" />
-        </Style>
-
-        <DataTemplate x:Name="DirectoryItemPropertiesView" x:DataType="properties:DirectoryItemBasicProperties">
-            <StackPanel Padding="10 5">
-
-                <Image Source="{x:Bind Thumbnail.Source}" Height="100" Style="{StaticResource PanelItem}" />
-
-                <TextBlock Text="{x:Bind Name}" Style="{StaticResource TitleTextBlockStyle}" 
-                           HorizontalAlignment="Center" 
-                           Margin="0 6"
-                           FontSize="25"/>
-
-                <TextBlock Text="{x:Bind Name}" Style="{StaticResource BodyTextBlockStyle}" 
-                           HorizontalAlignment="Center" 
-                           Margin="0 6"/>
-
-                <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}">
-                    <Paragraph>
-                        <Run Text="Modification date: " />
-                        <Run Text="{x:Bind ModifiedDate}" />
-                    </Paragraph>
-                </RichTextBlock>
-
-                <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}">
-                    <Paragraph>
-                        <Run Text="Creation date: " />
-                        <Run Text="{x:Bind CreationTime}" />
-                    </Paragraph>
-                </RichTextBlock>
-
-                <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}">
-                    <Paragraph>
-                        <Run Text="Path: " />
-                        <Run Text="{x:Bind Path}" />
-                    </Paragraph>
-                </RichTextBlock>
-
-                <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}" 
-                               Visibility="{x:Bind HasSize, Converter={StaticResource BoolToVisibilityConverter}}">
-                    <Paragraph>
-                        <Run Text="Size: " />
-                        <Run Text="{x:Bind Size}" />
-                    </Paragraph>
-                </RichTextBlock>
-
-            </StackPanel>
+        <DataTemplate x:Name="DirectoryItemPropertiesView" x:DataType="local:ItemPropertiesPanel">
+            <storageProperties:DirectoryItemPropertiesViewer
+                Item="{x:Bind (properties:DirectoryItemBasicProperties)ViewModel.Properties, Mode=OneWay}" />
         </DataTemplate>
 
         <DataTemplate x:Name="DrivePropertiesView" x:DataType="properties:DriveBasicProperties">
@@ -74,54 +29,23 @@
 
     </UserControl.Resources>
 
-    <Grid Width="300" Visibility="{x:Bind ViewModel.PaneVisibility, Mode=OneWay}">
+    <Grid Width="320" Visibility="{x:Bind ViewModel.PaneVisibility, Mode=OneWay}"
+          Padding="5" Margin="2">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-
-        <!--<ScrollViewer>
-            <StackPanel Padding="10 5">
-
-                <Image Source="{x:Bind ViewModel.Info.Thumbnail, Mode=OneWay}" Height="100" Style="{StaticResource PanelItem}" />
-
-                <TextBlock Text="{x:Bind ViewModel.Info.Name, Mode=OneWay}" Style="{StaticResource TitleTextBlockStyle}" 
-                           HorizontalAlignment="Center" 
-                           Margin="0 6"
-                           FontSize="25"/>
-
-                <TextBlock Text="{x:Bind ViewModel.Info.TitleInfo, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}" 
-                           HorizontalAlignment="Center" 
-                           Margin="0 6"/>
-
-                <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                    <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Modification date</TextBlock>
-                    <TextBlock Text="{x:Bind ViewModel.Info.ModifiedDate, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                    <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Creation date</TextBlock>
-                    <TextBlock Text="{x:Bind ViewModel.Info.CreationTime, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                    <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Full path</TextBlock>
-                    <TextBlock Text="{x:Bind ViewModel.Info.FullPath, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                </StackPanel>
-
-            </StackPanel>
-        </ScrollViewer>-->
-
-        <ContentControl ContentTemplateSelector="{StaticResource TemplateSelector}">
+        <ContentControl ContentTemplateSelector="{StaticResource TemplateSelector}"
+                        HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
 
             <interactivity:Interaction.Behaviors>
                 <templateBehaciors:BasicFilePropertiesChangedBehavior 
-                    ItemProps="{x:Bind ViewModel.Properties, Mode=OneWay}" 
+                    Value="{x:Bind ViewModel.Properties, Mode=OneWay}" 
                     TemplateSelector="{StaticResource TemplateSelector}" />
             </interactivity:Interaction.Behaviors>
 
         </ContentControl>
-
 
         <Button Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" BorderBrush="Transparent"
                         Command="{x:Bind ViewModel.CloseCommand}">
